--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
             <div class="home__img">
-                <img src="../portifolio/portifolio.jpg" width="500px" alt="">
+                <img src="../Developer_Crown/portifolio.jpg" width="500px" alt="">
             </div>
         </section>
 
@@ -50,7 +50,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="../portifolio/images.jpg" width="500px" alt="">
+                    <img src="../Developer_Crown/images.jpg" width="500px" alt="">
                 </div>
                     
                 <div>
@@ -122,7 +122,7 @@
                 </div>
                 
                 <div>              
-                    <img src="../portifolio/images (1).jpg" width="400px" alt="" class="skills__img">
+                    <img src="../Developer_Crown/images (1).jpg" width="400px" alt="" class="skills__img">
                 </div>
             </div>
         </section>
